testing a fix to the overlap

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -12,7 +12,7 @@ body {
     font-family: var(--font-family-body);
     background-color: var(--color-bg);
     color: var(--color-fg);
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 h1 {
